--- a/css/index.css
+++ b/css/index.css
@@ -1,19 +1,40 @@
-.login-container {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0,0,0,0.8);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 1000;
-  }
+@import url('https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&display=swap');
 
-  .login-form {
-    background: white;
-    padding: 2rem;
-    border-radius: 8px;
-    width: 300px;
-  }
+/* Fond d'écran appliqué au body */
+.fond {
+  background-image: url("../ressources/images/Background.png");
+  background-size: cover; /* Ajuste l'image pour couvrir tout l'écran */
+  background-repeat: no-repeat; /* Évite la répétition de l'image */
+  background-position: center; /* Centre l'image */
+  margin: 0; /* Supprime les marges par défaut */
+}
+
+/* Conteneur de connexion */
+.login-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 80vh; /* S'assure qu'il se centre verticalement */
+}
+
+/* Formulaire */
+.login-form {
+  background: white;
+  border: solid;
+  border-radius: 8px;
+  width: 800px;
+  height: 500px;
+  display: flex; 
+  flex-direction: column; /* Organise les enfants en colonne */
+  justify-content: center; /* Centre verticalement*/
+  align-items: center; /* Centre horizontalement */
+}
+
+  
+.caveat {
+  color: white;
+  font-family: "Caveat", cursive;
+  font-optical-sizing: auto;
+  font-style: normal;
+  font-size: 70px;
+}
