--- a/css/index.css
+++ b/css/index.css
@@ -25,7 +25,7 @@ body{
   width: 800px;
   height: 500px;
   display: flex; 
-  flex-direction: column; /* Organise les enfants en colonne */
+  flex-direction: column; 
   justify-content: center; /* Centre verticalement*/
   align-items: center; /* Centre horizontalement */
 }
