--- a/css/consultation.css
+++ b/css/consultation.css
@@ -1,13 +1,3 @@
-:root {
-    --primary: #2c3e50;
-    --secondary: #34495e;
-    --accent: #e74c3e;
-    --light: #ecf0f1;
-    --success: #27ae60;
-    --warning: #f39c12;
-    --danger: #c0392b;
-}
-
 .fond {
     background-image: url("../ressources/images/Background.png");
     background-size: cover; /* Ajuste l'image pour qu'elle remplisse l'écran */
@@ -17,44 +7,6 @@
     width: 100vw; /* Définit la largeur de l'image à la taille de l'écran */
     margin: 0; /* Supprime les marges */
     overflow: hidden; /* Empêche le débordement */
-}
-
-
-.navbar {
-    background: var(--primary);
-    padding: 1rem;
-    color: white;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.logo {
-    font-size: 1.5rem;
-    font-weight: bold;
-    display: flex;
-    align-items: center;
-    gap: 0.5rem;
-}
-
-.logo-img {
-    width: 50px;
-}
-
-.main-menu {
-    display: flex;
-    gap: 1rem;
-}
-
-.menu-item {
-    cursor: pointer;
-    padding: 0.5rem 1rem;
-    border-radius: 4px;
-    transition: background 0.3s;
-}
-
-.menu-item:hover {
-    background: var(--secondary);
 }
 
 .content {
@@ -131,7 +83,7 @@ button.btn {
     padding: 0.5rem 1rem;
     font-size: 0.9rem;
     font-weight: bold;
-    margin: 0 0.5rem;
+    /* margin: 0 0.5rem; */
 }
 
 .btn-modify {
