--- a/css/navBar.css
+++ b/css/navBar.css
@@ -10,7 +10,7 @@
 
 .navbar {
   background: var(--primary);
-  padding: 1rem;
+  padding: 16px;
   color: white;
   display: flex;
   justify-content: space-between;
@@ -39,8 +39,13 @@
   padding: 0.5rem 1rem;
   border-radius: 4px;
   transition: background 0.3s;
+  color: #FFF; 
 }
 
 .menu-item:hover {
   background: var(--secondary);
+}
+
+.deco {
+  text-decoration: none; /* Supprime le soulignement */
 }
