--- a/css/consultation.css
+++ b/css/consultation.css
@@ -123,3 +123,12 @@ button.btn {
     align-items: center;
     gap: 0.5rem;
 }
+
+footer {
+    text-align: center;
+    padding: 5px;
+    background-color: #2c3e50;
+    color: white;
+    display: flex;
+    flex-direction: column;
+}
