--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,9 @@
     justify-content: space-between;
     align-items: center;
   }
+
+
+  
   
   .logo {
     font-size: 1.5rem;
@@ -48,11 +51,21 @@
   
   .menu-item:hover {
     background: var(--secondary);
+    text-decoration: underline;
+    text-decoration-thickness: 2px; /* Épaisseur du soulignement */
+    text-underline-offset: 4px; /* Distance entre le texte et le soulignement */
   }
   
   .deco {
     text-decoration: none; /* Supprime le soulignement */
   }
+
+  /* Mettre en evidence l'onglet actif */
+  .menu-item.active {
+    background-color: var(--secondary); /* Une couleur différente pour mettre en évidence */
+    color: white;
+    border-radius: 8px; /* Optionnel : pour un style arrondi */
+}
 
 /* ----------------------------------------------------------------------*/
 /* CSS pour l'index */
@@ -432,8 +445,7 @@ footer {
     padding: 5px;
     background-color: #2c3e50;
     color: white;
-    display: flex;
-    flex-direction: column;
+
 }
 
 /* Cacher pour le bouton filtres */
